# fair-split-protocol

./: README.md  check_deployer_balance.py  fair_split.code-workspace
projects/fair_split/: .algokit.toml  README.md  pyproject.toml
projects/fair_split/.algokit/: .copier-answers.yml
projects/fair_split/smart_contracts/artifacts/fair_split/: FairSplit.approval.puya.map  FairSplit.approval.teal  FairSplit.arc56.json  fair_split_client.py
projects/fair_split/smart_contracts/fair_split/: contract.py  deploy_config.py
